@@ -1,4 +1,4 @@
-# $Id: Makefile.vc,v 1.22 2009-06-23 18:25:43 fwarmerdam Exp $
+# $Id: Makefile.vc,v 1.23 2015-08-19 02:31:04 bfriesen Exp $
 #
 # Copyright (C) 2004, Andrey Kiselev <dron@ak4719.spb.edu>
 #
@@ -87,11 +87,11 @@ tiffconf.h:	tiffconf.vc.h
 	copy tiffconf.vc.h tiffconf.h
 
 libtiff.lib:	tif_config.h tiffconf.h $(OBJ)
-	$(AR) /out:libtiff.lib $(OBJ) $(LIBS)
+	$(AR) /out:libtiff.lib ..\port\libport.lib $(OBJ) $(LIBS)
 
 $(DLLNAME):	tif_config.h tiffconf.h libtiff.def $(OBJ)
 	$(LD) /debug /dll /def:libtiff.def /out:$(DLLNAME) \
-	/implib:libtiff_i.lib $(OBJ) $(LIBS)
+	/implib:libtiff_i.lib ..\port\libport.lib $(OBJ) $(LIBS)
 	
 clean:
 	-del tif_config.h tiffconf.h
