@@ -9,6 +9,7 @@
 
 #include <stdio.h>
 #include <stdarg.h>
+#include "libport.h"
 
 int vsnprintf(char* str, size_t size, const char* format, va_list ap)
 {
