@@ -1,4 +1,4 @@
-/* $Id: tiff2pdf.c,v 1.89 2015-06-21 01:09:10 bfriesen Exp $
+/* $Id: tiff2pdf.c,v 1.90 2015-08-19 02:31:04 bfriesen Exp $
  *
  * tiff2pdf - converts a TIFF image to a PDF document
  *
@@ -412,7 +412,7 @@ t2p_seekproc(thandle_t handle, uint64 offset, int whence)
 { 
 	T2P *t2p = (T2P*) handle;
 	if (t2p->outputdisable <= 0 && t2p->outputfile)
-		return fseek(t2p->outputfile, (long) offset, whence);
+		return _TIFF_fseek_f(t2p->outputfile, (_TIFF_off_t) offset, whence);
 	return offset;
 }
 
